items and footer

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <!-- header -->
-    <header>influencer products</header>
+    <header class="hed">influencer products</header>
     <!-- header end -->
     <section class="camera-blog">
-        <article>
+        <article class="first-article">
             <h1>start your journey as a influencer</h1>
             <p>
                 A camera is a device that takes pictures (photographs). It uses film or electronics to make a picture of
@@ -35,6 +35,218 @@
         </div>
 
     </section>
+    <section class="container">
+        <h2 class="popular">
+            popular calection
+        </h2>
+        <div class="pupular-items">
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/mic.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/airpod.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/drone.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/lights.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/setup.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/camera.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/single-light.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+            <div class="items">
+                <div class="items-banner">
+                    <img src="images/action.png" alt="">
+                </div>
+                <div class="items-info">
+                    <h3 class="items-title">
+                        flex tripo <br>$50.48
+                    </h3>
+                    <div class="item-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.9</p>
+
+                    </div>
+                    <article>worldwide shooting <br>available <br>buyers protection possible</article>
+                </div>
+            </div>
+
+
+        </div>
+
+
+    </section>
+    <section class="see">
+        <a class="more" href="https://camara.org/">see more <i class="fas fa-angle-right"></i></a>
+    </section>
+    <footer class="foot">
+        <h1> influencer products</h1>
+        <p>copyright <i class="far fa-copyright"></i>influencer
+            products</p>
+        <p>all rights reserved </p>
+
+        <p class="social-icon"><i class="fab fa-instagram"></i><i class="fab fa-twitter"></i><i
+                class="fab fa-youtube"></i></p>
+    </footer>
 </body>
 
 </html>
