--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- header -->
     <header class="hed">influencer products</header>
     <!-- header end -->
+
+    <!-- camera blog start -->
     <section class="camera-blog">
         <article class="first-article">
             <h1>start your journey as a influencer</h1>
@@ -35,6 +37,10 @@
         </div>
 
     </section>
+    <!-- camera blog end -->
+
+    <!-- popular items -->
+
     <section class="container">
         <h2 class="popular">
             popular calection
@@ -235,9 +241,12 @@
 
 
     </section>
+
+    <!-- popular items end -->
     <section class="see">
         <a class="more" href="https://camara.org/">see more <i class="fas fa-angle-right"></i></a>
     </section>
+    <!-- footer-start -->
     <footer class="foot">
         <h1> influencer products</h1>
         <p>copyright <i class="far fa-copyright"></i>influencer
@@ -247,6 +256,9 @@
         <p class="social-icon"><i class="fab fa-instagram"></i><i class="fab fa-twitter"></i><i
                 class="fab fa-youtube"></i></p>
     </footer>
+
+    <!-- footer-finis--- -->
+
 </body>
 
 </html>
